# r.diag

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST  Makefile  README.org  README.txt  TODO.org  config.in  environment_setup.dot
.ssm.d/: post-install.in
development/: Commandes  Makefile  README.md
development/include/: Makefile_mods
development/lib/: stubs.f90
development/man/pdoc/: Diag_Config.html  Makefile  index.html
development/share/pdoc/: Makefile
development/src/cdf2ccc/: Makefile  cdf2ccc.F90  cdf2ccc.ftn  lire_arg.f
development/src/extras/ddfun90/: Makefile
development/src/lspgm/: Makefile  binach.ptn  fmask.ptn  gpasg.ptn  index.html  timavg.ptn
development/src/lssub/: Makefile  Makefile_sources98  convsub.ftn  diag_convert_ip123.cdk90  lowio.ftn  util.ftn
extras/: Makefile
extras/NetcdfUdunits/AIX-powerpc7/xlf13/include/: netcdf.mod  typesizes.mod  udunits.inc
extras/NetcdfUdunits/AIX-powerpc7/xlf13/man/man1/: udunits.1  udunitsperl.1
extras/NetcdfUdunits/AIX-powerpc7/xlf13/man/man3/: udunits.3  udunits.3f
extras/NetcdfUdunits/Linux_x86-64/gfortran/include/: netcdf.mod  typesizes.mod
extras/NetcdfUdunits/Linux_x86-64/gfortran/lib/: libnetcdf.la  libnetcdff.la
extras/NetcdfUdunits/Linux_x86-64/gfortran/man/man1/: udunits.1
extras/NetcdfUdunits/Linux_x86-64/gfortran/man/man3/: udunits.3
extras/NetcdfUdunits/Linux_x86-64/intel13sp1u2/include/: netcdf.mod  typesizes.mod  udunits.h
extras/NetcdfUdunits/Linux_x86-64/intel13sp1u2/lib/: libnetcdf.la  libnetcdff.la
extras/NetcdfUdunits/Linux_x86-64/intel13sp1u2/man/man1/: udunits.1  udunitsperl.1
extras/NetcdfUdunits/Linux_x86-64/intel13sp1u2/man/man3/: udunits.3  udunits.3f
extras/NetcdfUdunits/Linux_x86-64/pgi13xx/include/: netcdf.mod  typesizes.mod
extras/NetcdfUdunits/Linux_x86-64/pgi13xx/lib/: libnetcdf.la  libnetcdff.la
extras/NetcdfUdunits/Linux_x86-64/pgi13xx/man/man1/: udunitsperl.1
extras/NetcdfUdunits/Linux_x86-64/pgi13xx/man/man3/: udunits.3f
extras/src/udunits-1.12.11/src/: Makefile.in  RELEASE_NOTES
extras/src/udunits-1.12.11/src/port/: master.mk.in
extras/src/udunits-1.12.11/src/udunits/: udunits.c
extras/udunits-1.12.11/src/: Makefile.in
extras/udunits-1.12.11/src/lib/: utlib.c
man/pdoc/: Diag_Config.html  addf.txt  adjust.txt  anomali.txt  barx.txt  bary.txt  binach.txt  binning.txt  bins.txt  cdf2ccc.txt  cofagg.txt  complex.txt  constr.txt  convert.txt  crvplot.txt  cwinds.txt  delhat.txt  delhato.txt  dely.txt  dertim.txt  diftim.txt  driver.txt  dxdp.txt  eofrot.txt  expone.txt  extrac.txt  fcats.txt  fit.txt  flat.txt  fmask.txt  fpow.txt  fptest.txt  ftest.txt  fullmix.txt  gaussw.txt  ggatim.txt  ggdev.txt  ggdlat.txt  ggdlon.txt  ggsign.txt  (+97 more)
share/pdoc/: Error_messages.html  Licence.txt  addtext.txt  beta.txt  betao.txt  calmap.txt  calpres.txt  cdf2ccc.txt  chabin.txt  chklev.txt  cofaps.txt  condef.txt  corpar.txt  cosf.txt  critt.txt  ctemps.txt  delx.txt  divf.txt  enleve.txt  fstmdiag.txt  fsttri.txt  fullcor.txt  gadd.txt  ggacof.txt  ggall.txt  ggaps.txt  gghems.txt  gglob.txt  ggplot.txt  ggvecps.txt  globavg.txt  gmlt.txt  gpdpd.txt  gphum.txt  gpvtat.txt  grset.txt  gsaptp.txt  gsapzl.txt  gsathl.txt  gsathlt.txt  (+80 more)
src/.ssm.d/: control.json  post-install
src/cdf2ccc/: CMakeLists.txt  Makefile  affecte_attr.f  affecte_coord.f  affecte_dim.f  affecte_var.f  attr_value.f  attribut_coord.f  attribut_var.f  auxiliary_coordinate.f  cal_date.f  cdf2ccc.F90  clean_char.f  combline.f  conv_unit.f  decodate.f  def_attr_projection.f  def_cccma.f  def_date.f  def_dim_coord.F90  def_level.f  def_name.f  def_spectral_truncation.f  define_list.f  define_netcdf.f  define_var.f  encodate.f  enleve_bissextile2.f  eval_lonlat.f  eval_xcyc.f  get_attr.f  get_attribut.f  get_coord2.F90  get_coordonne.f  get_dim.f  get_name.f  get_string.f  get_topo.F90  get_var.f  handle_err.f  (+22 more)
src/extras/: CMakeLists.txt
src/extras/ddfun90/: CMakeLists.txt
src/extras/descrip/: CMakeLists.txt  armnlib.h  vgrid.c  vgrid_descriptors.hf
src/extras/tools/: CMakeLists.txt
src/extras/udunits-f-2.0/: CMakeLists.txt
src/include/: Makefile_mods  fintern.cdk
src/lspgm/: CMakeLists.txt  Makefile  addf.ptn  addtext.ptn  adjust.ptn  anomali.ptn  averages.ptn90  barx.ptn  bary.ptn  beta.ptn  betao.ptn  binach.ptn  binning.ptn  bins.ptn  calmap.ptn  calpres.ptn  cdiv.ptn  chabin.ptn  chklev.ptn  cmlt.ptn  cofagg.ptn  cofaps.ptn  complex.ptn  condef.ptn  conjmlt.ptn  constr.ptn  convert.ptn  corpar.ptn  cosf.ptn  critt.ptn  crvplot.ptn  ctemps.ptn  cwinds.ptn  delhat.ptn  delhato.ptn  delx.ptn  dely.ptn  dertim.ptn  diftim.ptn  divf.ptn  (+208 more)
src/lssub/: CMakeLists.txt  alp.f  averages_common.f90  cofg.f  convsub.f  convsub.ftn  coord.f  ddl.f  diag_convert_ip123.f90  diag_convert_ip123.mod  diag_convip_plus.f90  diag_toc.f90  dimgt.f  divers.c  eapl.f  eof.f  fastaf.f  fastaf2.f  ffgfw2.f  fftcray.f  fftini.f  ffwfg2.f  filev.f  filter.f90  four2.f  gaussg.f90  gcof.f  gemdiag.f90  get.f  ggd.f  gobits.f  inctdia.f  interp.f  ism.f  label.f  lgtst.f  lire_arg.f  lowio.f  lowio92.f  lssub.f  (+20 more)
src/man/: CMakeLists.txt
src/man/pdoc/: Change_Log.html  Diag_Config.html  Error_messages.html
test/: CMakeLists.txt
